``` feat(devDependencies): 添加volar、unplugin-vue-macros和vite-plugin-inspect
添加了@vue-macros/volar、unplugin-vue-macros和vite-plugin-inspect到devDependencies，以提升项目开发体验。这些依赖分别用于提供Vue语法支持、宏插件机制和Vite插件检查工具。
```

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,21 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.node.json"
+        }
+    ],
+    "vueCompilerOptions": {
+        "plugins": [
+            "@vue-macros/volar/define-models",
+            "@vue-macros/volar/define-props",
+            "@vue-macros/volar/define-props-refs",
+            "@vue-macros/volar/short-vmodel",
+            "@vue-macros/volar/export-props"
+        ],
+        "experimentalDefinePropProposal": "kevinEdition"
+    }
 }
