--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
+        "@vue-macros/volar": "^0.27.4",
         "typescript": "^5.5.3",
+        "unplugin-vue-macros": "^2.11.6",
         "vite": "^5.4.1",
+        "vite-plugin-inspect": "^0.8.5",
         "vue-tsc": "^2.0.29"
     }
 }
