--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,6 +21,10 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": [
+        "src/**/*.ts",
+        "src/**/*.d.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
         "vite.config.ts"
     ]
 }
