--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "element-plus": "^2.8.1",
         "vite-plugin-qiankun": "^1.0.15",
-        "vue": "^3.4.37"
+        "vue": "^3.4.37",
+        "vue-router": "^4.4.4"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
-        "@vue-macros/volar": "^0.27.4",
         "typescript": "^5.5.3",
-        "unplugin-vue-macros": "^2.11.6",
+        "unplugin-auto-import": "^0.18.2",
+        "unplugin-vue-components": "^0.27.4",
         "vite": "^5.4.1",
-        "vite-plugin-inspect": "^0.8.5",
         "vue-tsc": "^2.0.29"
     }
 }
