--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,10 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "types": [
+            "unplugin-vue-macros/macros-global"
+        ]
     },
     "include": [
         "src/**/*.ts",
