类型声明和路由更新以及Vite配置优化
- 新增`@types/node`声明文件，提升项目类型完整性。
- 重构`src/router/index.ts`，添加新路由并优化滚动行为。
- 更新`vite.config.ts`，引入`path`模块并进行路径别名配置。
- 调整`tsconfig.node.json`，适配最新的路径处理和类型声明。

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,13 +21,28 @@
         "noFallthroughCasesInSwitch": true,
         "types": [
             "unplugin-vue-macros/macros-global"
-        ]
+        ],
+        "baseUrl": "./",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "#/*": [
+                "types/*"
+            ]
+        }
     },
     "include": [
         "src/**/*.ts",
         "src/**/*.d.ts",
         "src/**/*.tsx",
         "src/**/*.vue",
+        "types/**/*.ts",
+        "types/**/*.d.ts",
         "vite.config.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
     ]
 }
