--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/node": "^22.5.5",
         "element-plus": "^2.8.1",
         "vite-plugin-qiankun": "^1.0.15",
         "vue": "^3.4.37",
